parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM program_point ID COLON modules main
Rule 2     program_point -> empty
Rule 3     modules -> modules_2 modules_point modules_3
Rule 4     modules_point -> empty
Rule 5     modules_2 -> vars
Rule 6     modules_2 -> empty
Rule 7     modules_3 -> function
Rule 8     modules_3 -> empty
Rule 9     main -> MAIN LPAR RPAR L_C_BRACKET body R_C_BRACKET SEMICOLON
Rule 10    body -> vars estatuto body_2
Rule 11    body_2 -> estatuto body_2
Rule 12    body_2 -> empty
Rule 13    tipo_simple -> INT
Rule 14    tipo_simple -> FLOAT
Rule 15    tipo_simple -> CHAR
Rule 16    tipo_comp -> DATAFRAME
Rule 17    vars -> VAR vars_2 SEMICOLON vars_8
Rule 18    vars_2 -> tipo_comp vars_3
Rule 19    vars_2 -> tipo_simple vars_4
Rule 20    vars_3 -> ID vars_5
Rule 21    vars_4 -> vars_3
Rule 22    vars_4 -> ID vars_6
Rule 23    vars_5 -> COMMA vars_3
Rule 24    vars_5 -> empty
Rule 25    vars_6 -> punto_id_especial L_S_BRACKET CTE_I R_S_BRACKET vars_7
Rule 26    vars_6 -> empty
Rule 27    punto_id_especial -> empty
Rule 28    vars_7 -> L_S_BRACKET CTE_I R_S_BRACKET var_mat
Rule 29    vars_7 -> var_array
Rule 30    var_array -> empty
Rule 31    var_mat -> empty
Rule 32    vars_8 -> vars
Rule 33    vars_8 -> empty
Rule 34    param -> tipo_simple ID punto_param param_2
Rule 35    param -> empty
Rule 36    param_2 -> COMMA param
Rule 37    param_2 -> empty
Rule 38    punto_param -> empty
Rule 39    variable -> ID variable_2
Rule 40    variable_2 -> L_S_BRACKET exp R_S_BRACKET variable_3
Rule 41    variable_2 -> empty
Rule 42    variable_3 -> L_S_BRACKET exp R_S_BRACKET
Rule 43    variable_3 -> empty
Rule 44    estatuto -> asigna
Rule 45    estatuto -> llamada
Rule 46    estatuto -> read
Rule 47    estatuto -> write
Rule 48    estatuto -> if_1
Rule 49    estatuto -> for_l
Rule 50    estatuto -> while_l
Rule 51    estatuto -> func_extra
Rule 52    asigna -> variable EQUAL exp SEMICOLON
Rule 53    llamada -> ID LPAR exp llamada_2 RPAR SEMICOLON
Rule 54    llamada_2 -> COMMA exp llamada_2
Rule 55    llamada_2 -> empty
Rule 56    read -> READ LPAR variable RPAR SEMICOLON
Rule 57    write -> WRITE LPAR write_2 write_3 RPAR SEMICOLON
Rule 58    write_2 -> exp
Rule 59    write_2 -> CTE_S
Rule 60    write_3 -> COMMA write_2 write_3
Rule 61    write_3 -> empty
Rule 62    if_1 -> IF LPAR exp RPAR L_C_BRACKET estatuto if_2 R_C_BRACKET if_3 SEMICOLON
Rule 63    if_2 -> estatuto if_2
Rule 64    if_2 -> empty
Rule 65    if_3 -> ELSE L_C_BRACKET estatuto if_2 R_C_BRACKET
Rule 66    for_l -> FOR LPAR ID RPAR EQUAL exp TO exp RPAR L_C_BRACKET estatuto for_l_2 R_C_BRACKET SEMICOLON
Rule 67    for_l_2 -> estatuto for_l_2
Rule 68    for_l_2 -> empty
Rule 69    while_l -> WHILE LPAR exp RPAR L_C_BRACKET estatuto while_l_2 R_C_BRACKET SEMICOLON
Rule 70    while_l_2 -> estatuto while_l_2
Rule 71    while_l_2 -> empty
Rule 72    func_extra -> empty
Rule 73    exp -> t_exp exp_2
Rule 74    exp_2 -> OR exp
Rule 75    exp_2 -> empty
Rule 76    t_exp -> g_exp t_exp_2
Rule 77    t_exp_2 -> AND t_exp
Rule 78    t_exp_2 -> empty
Rule 79    g_exp -> m_exp g_exp_2
Rule 80    g_exp_2 -> LESS_EQUAL g_exp_3
Rule 81    g_exp_2 -> LESS g_exp_3
Rule 82    g_exp_2 -> GREATER_EQUAL g_exp_3
Rule 83    g_exp_2 -> GREATER g_exp_3
Rule 84    g_exp_2 -> COMPARE g_exp_3
Rule 85    g_exp_2 -> NOT_EQUAL g_exp_3
Rule 86    g_exp_2 -> empty
Rule 87    g_exp_3 -> m_exp
Rule 88    m_exp -> t m_exp_2
Rule 89    m_exp_2 -> PLUS m_exp
Rule 90    m_exp_2 -> MINUS m_exp
Rule 91    m_exp_2 -> empty
Rule 92    t -> f t_2
Rule 93    t_2 -> TIMES t
Rule 94    t_2 -> DIVIDE t
Rule 95    t_2 -> empty
Rule 96    f -> LPAR m_exp RPAR
Rule 97    f -> variable
Rule 98    f -> llamada
Rule 99    f -> f_2
Rule 100   f_2 -> CTE_I
Rule 101   f_2 -> CTE_F
Rule 102   function -> FUNC function_2 SEMICOLON function_3
Rule 103   function_2 -> tipo_simple ID function_punto1 LPAR param RPAR L_C_BRACKET body RETURN LPAR exp RPAR SEMICOLON R_C_BRACKET func_agrega_v
Rule 104   function_2 -> VOID ID function_punto2 LPAR param RPAR L_C_BRACKET body R_C_BRACKET func_agrega_v
Rule 105   function_3 -> function
Rule 106   function_3 -> empty
Rule 107   function_punto1 -> empty
Rule 108   function_punto2 -> empty
Rule 109   func_agrega_v -> empty
Rule 110   empty -> <empty>

Terminals, with rules where they appear

AND                  : 77
CHAR                 : 15
COLON                : 1
COMMA                : 23 36 54 60
COMPARE              : 84
CTE_F                : 101
CTE_I                : 25 28 100
CTE_S                : 59
DATAFRAME            : 16
DIVIDE               : 94
ELSE                 : 65
EQUAL                : 52 66
FLOAT                : 14
FOR                  : 66
FUNC                 : 102
GREATER              : 83
GREATER_EQUAL        : 82
ID                   : 1 20 22 34 39 53 66 103 104
IF                   : 62
INT                  : 13
LESS                 : 81
LESS_EQUAL           : 80
LPAR                 : 9 53 56 57 62 66 69 96 103 103 104
L_C_BRACKET          : 9 62 65 66 69 103 104
L_S_BRACKET          : 25 28 40 42
MAIN                 : 9
MINUS                : 90
NOT_EQUAL            : 85
OR                   : 74
PLUS                 : 89
PROGRAM              : 1
READ                 : 56
RETURN               : 103
RPAR                 : 9 53 56 57 62 66 66 69 96 103 103 104
R_C_BRACKET          : 9 62 65 66 69 103 104
R_S_BRACKET          : 25 28 40 42
SEMICOLON            : 9 17 52 53 56 57 62 66 69 102 103
STRING               : 
TIMES                : 93
TO                   : 66
VAR                  : 17
VOID                 : 104
WHILE                : 69
WRITE                : 57
error                : 

Nonterminals, with rules where they appear

asigna               : 44
body                 : 9 103 104
body_2               : 10 11
empty                : 2 4 6 8 12 24 26 27 30 31 33 35 37 38 41 43 55 61 64 68 71 72 75 78 86 91 95 106 107 108 109
estatuto             : 10 11 62 63 65 66 67 69 70
exp                  : 40 42 52 53 54 58 62 66 66 69 74 103
exp_2                : 73
f                    : 92
f_2                  : 99
for_l                : 49
for_l_2              : 66 67
func_agrega_v        : 103 104
func_extra           : 51
function             : 7 105
function_2           : 102
function_3           : 102
function_punto1      : 103
function_punto2      : 104
g_exp                : 76
g_exp_2              : 79
g_exp_3              : 80 81 82 83 84 85
if_1                 : 48
if_2                 : 62 63 65
if_3                 : 62
llamada              : 45 98
llamada_2            : 53 54
m_exp                : 79 87 89 90 96
m_exp_2              : 88
main                 : 1
modules              : 1
modules_2            : 3
modules_3            : 3
modules_point        : 3
param                : 36 103 104
param_2              : 34
program              : 0
program_point        : 1
punto_id_especial    : 25
punto_param          : 34
read                 : 46
t                    : 88 93 94
t_2                  : 92
t_exp                : 73 77
t_exp_2              : 76
tipo_comp            : 18
tipo_simple          : 19 34 103
var_array            : 29
var_mat              : 28
variable             : 52 56 97
variable_2           : 39
variable_3           : 40
vars                 : 5 10 32
vars_2               : 17
vars_3               : 18 21 23
vars_4               : 19
vars_5               : 20
vars_6               : 22
vars_7               : 25
vars_8               : 17
while_l              : 50
while_l_2            : 69 70
write                : 47
write_2              : 57 60
write_3              : 57 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM program_point ID COLON modules main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . program_point ID COLON modules main
    (2) program_point -> . empty
    (110) empty -> .

    ID              reduce using rule 110 (empty -> .)

    program_point                  shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) program -> PROGRAM program_point . ID COLON modules main

    ID              shift and go to state 5


state 4

    (2) program_point -> empty .

    ID              reduce using rule 2 (program_point -> empty .)


state 5

    (1) program -> PROGRAM program_point ID . COLON modules main

    COLON           shift and go to state 6


state 6

    (1) program -> PROGRAM program_point ID COLON . modules main
    (3) modules -> . modules_2 modules_point modules_3
    (5) modules_2 -> . vars
    (6) modules_2 -> . empty
    (17) vars -> . VAR vars_2 SEMICOLON vars_8
    (110) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 110 (empty -> .)
    MAIN            reduce using rule 110 (empty -> .)

    modules                        shift and go to state 7
    modules_2                      shift and go to state 8
    vars                           shift and go to state 9
    empty                          shift and go to state 10

state 7

    (1) program -> PROGRAM program_point ID COLON modules . main
    (9) main -> . MAIN LPAR RPAR L_C_BRACKET body R_C_BRACKET SEMICOLON

    MAIN            shift and go to state 13

    main                           shift and go to state 12

state 8

    (3) modules -> modules_2 . modules_point modules_3
    (4) modules_point -> . empty
    (110) empty -> .

    FUNC            reduce using rule 110 (empty -> .)
    MAIN            reduce using rule 110 (empty -> .)

    modules_point                  shift and go to state 14
    empty                          shift and go to state 15

state 9

    (5) modules_2 -> vars .

    FUNC            reduce using rule 5 (modules_2 -> vars .)
    MAIN            reduce using rule 5 (modules_2 -> vars .)


state 10

    (6) modules_2 -> empty .

    FUNC            reduce using rule 6 (modules_2 -> empty .)
    MAIN            reduce using rule 6 (modules_2 -> empty .)


state 11

    (17) vars -> VAR . vars_2 SEMICOLON vars_8
    (18) vars_2 -> . tipo_comp vars_3
    (19) vars_2 -> . tipo_simple vars_4
    (16) tipo_comp -> . DATAFRAME
    (13) tipo_simple -> . INT
    (14) tipo_simple -> . FLOAT
    (15) tipo_simple -> . CHAR

    DATAFRAME       shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22

    vars_2                         shift and go to state 16
    tipo_comp                      shift and go to state 17
    tipo_simple                    shift and go to state 18

state 12

    (1) program -> PROGRAM program_point ID COLON modules main .

    $end            reduce using rule 1 (program -> PROGRAM program_point ID COLON modules main .)


state 13

    (9) main -> MAIN . LPAR RPAR L_C_BRACKET body R_C_BRACKET SEMICOLON

    LPAR            shift and go to state 23


state 14

    (3) modules -> modules_2 modules_point . modules_3
    (7) modules_3 -> . function
    (8) modules_3 -> . empty
    (102) function -> . FUNC function_2 SEMICOLON function_3
    (110) empty -> .

    FUNC            shift and go to state 27
    MAIN            reduce using rule 110 (empty -> .)

    modules_3                      shift and go to state 24
    function                       shift and go to state 25
    empty                          shift and go to state 26

state 15

    (4) modules_point -> empty .

    FUNC            reduce using rule 4 (modules_point -> empty .)
    MAIN            reduce using rule 4 (modules_point -> empty .)


state 16

    (17) vars -> VAR vars_2 . SEMICOLON vars_8

    SEMICOLON       shift and go to state 28


state 17

    (18) vars_2 -> tipo_comp . vars_3
    (20) vars_3 -> . ID vars_5

    ID              shift and go to state 30

    vars_3                         shift and go to state 29

state 18

    (19) vars_2 -> tipo_simple . vars_4
    (21) vars_4 -> . vars_3
    (22) vars_4 -> . ID vars_6
    (20) vars_3 -> . ID vars_5

    ID              shift and go to state 33

    vars_4                         shift and go to state 31
    vars_3                         shift and go to state 32

state 19

    (16) tipo_comp -> DATAFRAME .

    ID              reduce using rule 16 (tipo_comp -> DATAFRAME .)


state 20

    (13) tipo_simple -> INT .

    ID              reduce using rule 13 (tipo_simple -> INT .)


state 21

    (14) tipo_simple -> FLOAT .

    ID              reduce using rule 14 (tipo_simple -> FLOAT .)


state 22

    (15) tipo_simple -> CHAR .

    ID              reduce using rule 15 (tipo_simple -> CHAR .)


state 23

    (9) main -> MAIN LPAR . RPAR L_C_BRACKET body R_C_BRACKET SEMICOLON

    RPAR            shift and go to state 34


state 24

    (3) modules -> modules_2 modules_point modules_3 .

    MAIN            reduce using rule 3 (modules -> modules_2 modules_point modules_3 .)


state 25

    (7) modules_3 -> function .

    MAIN            reduce using rule 7 (modules_3 -> function .)


state 26

    (8) modules_3 -> empty .

    MAIN            reduce using rule 8 (modules_3 -> empty .)


state 27

    (102) function -> FUNC . function_2 SEMICOLON function_3
    (103) function_2 -> . tipo_simple ID function_punto1 LPAR param RPAR L_C_BRACKET body RETURN LPAR exp RPAR SEMICOLON R_C_BRACKET func_agrega_v
    (104) function_2 -> . VOID ID function_punto2 LPAR param RPAR L_C_BRACKET body R_C_BRACKET func_agrega_v
    (13) tipo_simple -> . INT
    (14) tipo_simple -> . FLOAT
    (15) tipo_simple -> . CHAR

    VOID            shift and go to state 37
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22

    function_2                     shift and go to state 35
    tipo_simple                    shift and go to state 36

state 28

    (17) vars -> VAR vars_2 SEMICOLON . vars_8
    (32) vars_8 -> . vars
    (33) vars_8 -> . empty
    (17) vars -> . VAR vars_2 SEMICOLON vars_8
    (110) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 110 (empty -> .)
    MAIN            reduce using rule 110 (empty -> .)
    ID              reduce using rule 110 (empty -> .)
    READ            reduce using rule 110 (empty -> .)
    WRITE           reduce using rule 110 (empty -> .)
    IF              reduce using rule 110 (empty -> .)
    FOR             reduce using rule 110 (empty -> .)
    WHILE           reduce using rule 110 (empty -> .)
    R_C_BRACKET     reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)

    vars_8                         shift and go to state 38
    vars                           shift and go to state 39
    empty                          shift and go to state 40

state 29

    (18) vars_2 -> tipo_comp vars_3 .

    SEMICOLON       reduce using rule 18 (vars_2 -> tipo_comp vars_3 .)


state 30

    (20) vars_3 -> ID . vars_5
    (23) vars_5 -> . COMMA vars_3
    (24) vars_5 -> . empty
    (110) empty -> .

    COMMA           shift and go to state 42
    SEMICOLON       reduce using rule 110 (empty -> .)

    vars_5                         shift and go to state 41
    empty                          shift and go to state 43

state 31

    (19) vars_2 -> tipo_simple vars_4 .

    SEMICOLON       reduce using rule 19 (vars_2 -> tipo_simple vars_4 .)


state 32

    (21) vars_4 -> vars_3 .

    SEMICOLON       reduce using rule 21 (vars_4 -> vars_3 .)


state 33

    (22) vars_4 -> ID . vars_6
    (20) vars_3 -> ID . vars_5
    (25) vars_6 -> . punto_id_especial L_S_BRACKET CTE_I R_S_BRACKET vars_7
    (26) vars_6 -> . empty
    (23) vars_5 -> . COMMA vars_3
    (24) vars_5 -> . empty
    (27) punto_id_especial -> . empty
    (110) empty -> .

    COMMA           shift and go to state 42
    SEMICOLON       reduce using rule 110 (empty -> .)
    L_S_BRACKET     reduce using rule 110 (empty -> .)

    vars_6                         shift and go to state 44
    vars_5                         shift and go to state 41
    punto_id_especial              shift and go to state 45
    empty                          shift and go to state 46

state 34

    (9) main -> MAIN LPAR RPAR . L_C_BRACKET body R_C_BRACKET SEMICOLON

    L_C_BRACKET     shift and go to state 47


state 35

    (102) function -> FUNC function_2 . SEMICOLON function_3

    SEMICOLON       shift and go to state 48


state 36

    (103) function_2 -> tipo_simple . ID function_punto1 LPAR param RPAR L_C_BRACKET body RETURN LPAR exp RPAR SEMICOLON R_C_BRACKET func_agrega_v

    ID              shift and go to state 49


state 37

    (104) function_2 -> VOID . ID function_punto2 LPAR param RPAR L_C_BRACKET body R_C_BRACKET func_agrega_v

    ID              shift and go to state 50


state 38

    (17) vars -> VAR vars_2 SEMICOLON vars_8 .

    FUNC            reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    MAIN            reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    ID              reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    READ            reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    WRITE           reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    IF              reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    FOR             reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    WHILE           reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    R_C_BRACKET     reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)
    RETURN          reduce using rule 17 (vars -> VAR vars_2 SEMICOLON vars_8 .)


state 39

    (32) vars_8 -> vars .

    FUNC            reduce using rule 32 (vars_8 -> vars .)
    MAIN            reduce using rule 32 (vars_8 -> vars .)
    ID              reduce using rule 32 (vars_8 -> vars .)
    READ            reduce using rule 32 (vars_8 -> vars .)
    WRITE           reduce using rule 32 (vars_8 -> vars .)
    IF              reduce using rule 32 (vars_8 -> vars .)
    FOR             reduce using rule 32 (vars_8 -> vars .)
    WHILE           reduce using rule 32 (vars_8 -> vars .)
    R_C_BRACKET     reduce using rule 32 (vars_8 -> vars .)
    RETURN          reduce using rule 32 (vars_8 -> vars .)


state 40

    (33) vars_8 -> empty .

    FUNC            reduce using rule 33 (vars_8 -> empty .)
    MAIN            reduce using rule 33 (vars_8 -> empty .)
    ID              reduce using rule 33 (vars_8 -> empty .)
    READ            reduce using rule 33 (vars_8 -> empty .)
    WRITE           reduce using rule 33 (vars_8 -> empty .)
    IF              reduce using rule 33 (vars_8 -> empty .)
    FOR             reduce using rule 33 (vars_8 -> empty .)
    WHILE           reduce using rule 33 (vars_8 -> empty .)
    R_C_BRACKET     reduce using rule 33 (vars_8 -> empty .)
    RETURN          reduce using rule 33 (vars_8 -> empty .)


state 41

    (20) vars_3 -> ID vars_5 .

    SEMICOLON       reduce using rule 20 (vars_3 -> ID vars_5 .)


state 42

    (23) vars_5 -> COMMA . vars_3
    (20) vars_3 -> . ID vars_5

    ID              shift and go to state 30

    vars_3                         shift and go to state 51

state 43

    (24) vars_5 -> empty .

    SEMICOLON       reduce using rule 24 (vars_5 -> empty .)


state 44

    (22) vars_4 -> ID vars_6 .

    SEMICOLON       reduce using rule 22 (vars_4 -> ID vars_6 .)


state 45

    (25) vars_6 -> punto_id_especial . L_S_BRACKET CTE_I R_S_BRACKET vars_7

    L_S_BRACKET     shift and go to state 52


state 46

    (26) vars_6 -> empty .
    (24) vars_5 -> empty .
    (27) punto_id_especial -> empty .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 24 (vars_5 -> empty .)
    SEMICOLON       reduce using rule 24 (vars_5 -> empty .)
    L_S_BRACKET     reduce using rule 27 (punto_id_especial -> empty .)

  ! SEMICOLON       [ reduce using rule 26 (vars_6 -> empty .) ]


state 47

    (9) main -> MAIN LPAR RPAR L_C_BRACKET . body R_C_BRACKET SEMICOLON
    (10) body -> . vars estatuto body_2
    (17) vars -> . VAR vars_2 SEMICOLON vars_8

    VAR             shift and go to state 11

    body                           shift and go to state 53
    vars                           shift and go to state 54

state 48

    (102) function -> FUNC function_2 SEMICOLON . function_3
    (105) function_3 -> . function
    (106) function_3 -> . empty
    (102) function -> . FUNC function_2 SEMICOLON function_3
    (110) empty -> .

    FUNC            shift and go to state 27
    MAIN            reduce using rule 110 (empty -> .)

    function_3                     shift and go to state 55
    function                       shift and go to state 56
    empty                          shift and go to state 57

state 49

    (103) function_2 -> tipo_simple ID . function_punto1 LPAR param RPAR L_C_BRACKET body RETURN LPAR exp RPAR SEMICOLON R_C_BRACKET func_agrega_v
    (107) function_punto1 -> . empty
    (110) empty -> .

    LPAR            reduce using rule 110 (empty -> .)

    function_punto1                shift and go to state 58
    empty                          shift and go to state 59

state 50

    (104) function_2 -> VOID ID . function_punto2 LPAR param RPAR L_C_BRACKET body R_C_BRACKET func_agrega_v
    (108) function_punto2 -> . empty
    (110) empty -> .

    LPAR            reduce using rule 110 (empty -> .)

    function_punto2                shift and go to state 60
    empty                          shift and go to state 61

state 51

    (23) vars_5 -> COMMA vars_3 .

    SEMICOLON       reduce using rule 23 (vars_5 -> COMMA vars_3 .)


state 52

    (25) vars_6 -> punto_id_especial L_S_BRACKET . CTE_I R_S_BRACKET vars_7

    CTE_I           shift and go to state 62


state 53

    (9) main -> MAIN LPAR RPAR L_C_BRACKET body . R_C_BRACKET SEMICOLON

    R_C_BRACKET     shift and go to state 63


state 54

    (10) body -> vars . estatuto body_2
    (44) estatuto -> . asigna
    (45) estatuto -> . llamada
    (46) estatuto -> . read
    (47) estatuto -> . write
    (48) estatuto -> . if_1
    (49) estatuto -> . for_l
    (50) estatuto -> . while_l
    (51) estatuto -> . func_extra
    (52) asigna -> . variable EQUAL exp SEMICOLON
    (53) llamada -> . ID LPAR exp llamada_2 RPAR SEMICOLON
    (56) read -> . READ LPAR variable RPAR SEMICOLON
    (57) write -> . WRITE LPAR write_2 write_3 RPAR SEMICOLON
    (62) if_1 -> . IF LPAR exp RPAR L_C_BRACKET estatuto if_2 R_C_BRACKET if_3 SEMICOLON
    (66) for_l -> . FOR LPAR ID RPAR EQUAL exp TO exp RPAR L_C_BRACKET estatuto for_l_2 R_C_BRACKET SEMICOLON
    (69) while_l -> . WHILE LPAR exp RPAR L_C_BRACKET estatuto while_l_2 R_C_BRACKET SEMICOLON
    (72) func_extra -> . empty
    (39) variable -> . ID variable_2
    (110) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    ID              shift and go to state 74
    READ            shift and go to state 75
    WRITE           shift and go to state 76
    IF              shift and go to state 77
    FOR             shift and go to state 78
    WHILE           shift and go to state 79
    R_C_BRACKET     reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)

  ! ID              [ reduce using rule 110 (empty -> .) ]
  ! READ            [ reduce using rule 110 (empty -> .) ]
  ! WRITE           [ reduce using rule 110 (empty -> .) ]
  ! IF              [ reduce using rule 110 (empty -> .) ]
  ! FOR             [ reduce using rule 110 (empty -> .) ]
  ! WHILE           [ reduce using rule 110 (empty -> .) ]

    estatuto                       shift and go to state 64
    asigna                         shift and go to state 65
    llamada                        shift and go to state 66
    read                           shift and go to state 67
    write                          shift and go to state 68
    if_1                           shift and go to state 69
    for_l                          shift and go to state 70
    while_l                        shift and go to state 71
    func_extra                     shift and go to state 72
    variable                       shift and go to state 73
    empty                          shift and go to state 80

state 55

    (102) function -> FUNC function_2 SEMICOLON function_3 .

    MAIN            reduce using rule 102 (function -> FUNC function_2 SEMICOLON function_3 .)


state 56

    (105) function_3 -> function .

    MAIN            reduce using rule 105 (function_3 -> function .)


state 57

    (106) function_3 -> empty .

    MAIN            reduce using rule 106 (function_3 -> empty .)


state 58

    (103) function_2 -> tipo_simple ID function_punto1 . LPAR param RPAR L_C_BRACKET body RETURN LPAR exp RPAR SEMICOLON R_C_BRACKET func_agrega_v

    LPAR            shift and go to state 81


state 59

    (107) function_punto1 -> empty .

    LPAR            reduce using rule 107 (function_punto1 -> empty .)


state 60

    (104) function_2 -> VOID ID function_punto2 . LPAR param RPAR L_C_BRACKET body R_C_BRACKET func_agrega_v

    LPAR            shift and go to state 82


state 61

    (108) function_punto2 -> empty .

    LPAR            reduce using rule 108 (function_punto2 -> empty .)


state 62

    (25) vars_6 -> punto_id_especial L_S_BRACKET CTE_I . R_S_BRACKET vars_7

    R_S_BRACKET     shift and go to state 83


state 63

    (9) main -> MAIN LPAR RPAR L_C_BRACKET body R_C_BRACKET . SEMICOLON

    SEMICOLON       shift and go to state 84


state 64

    (10) body -> vars estatuto . body_2
    (11) body_2 -> . estatuto body_2
    (12) body_2 -> . empty
    (44) estatuto -> . asigna
    (45) estatuto -> . llamada
    (46) estatuto -> . read
    (47) estatuto -> . write
    (48) estatuto -> . if_1
    (49) estatuto -> . for_l
    (50) estatuto -> . while_l
    (51) estatuto -> . func_extra
    (110) empty -> .
    (52) asigna -> . variable EQUAL exp SEMICOLON
    (53) llamada -> . ID LPAR exp llamada_2 RPAR SEMICOLON
    (56) read -> . READ LPAR variable RPAR SEMICOLON
    (57) write -> . WRITE LPAR write_2 write_3 RPAR SEMICOLON
    (62) if_1 -> . IF LPAR exp RPAR L_C_BRACKET estatuto if_2 R_C_BRACKET if_3 SEMICOLON
    (66) for_l -> . FOR LPAR ID RPAR EQUAL exp TO exp RPAR L_C_BRACKET estatuto for_l_2 R_C_BRACKET SEMICOLON
    (69) while_l -> . WHILE LPAR exp RPAR L_C_BRACKET estatuto while_l_2 R_C_BRACKET SEMICOLON
    (72) func_extra -> . empty
    (39) variable -> . ID variable_2

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_C_BRACKET     reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 74
    READ            shift and go to state 75
    WRITE           shift and go to state 76
    IF              shift and go to state 77
    FOR             shift and go to state 78
    WHILE           shift and go to state 79

  ! ID              [ reduce using rule 110 (empty -> .) ]
  ! READ            [ reduce using rule 110 (empty -> .) ]
  ! WRITE           [ reduce using rule 110 (empty -> .) ]
  ! IF              [ reduce using rule 110 (empty -> .) ]
  ! FOR             [ reduce using rule 110 (empty -> .) ]
  ! WHILE           [ reduce using rule 110 (empty -> .) ]

    estatuto                       shift and go to state 85
    body_2                         shift and go to state 86
    empty                          shift and go to state 87
    asigna                         shift and go to state 65
    llamada                        shift and go to state 66
    read                           shift and go to state 67
    write                          shift and go to state 68
    if_1                           shift and go to state 69
    for_l                          shift and go to state 70
    while_l                        shift and go to state 71
    func_extra                     shift and go to state 72
    variable                       shift and go to state 73

state 65

    (44) estatuto -> asigna .

    ID              reduce using rule 44 (estatuto -> asigna .)
    READ            reduce using rule 44 (estatuto -> asigna .)
    WRITE           reduce using rule 44 (estatuto -> asigna .)
    IF              reduce using rule 44 (estatuto -> asigna .)
    FOR             reduce using rule 44 (estatuto -> asigna .)
    WHILE           reduce using rule 44 (estatuto -> asigna .)
    R_C_BRACKET     reduce using rule 44 (estatuto -> asigna .)
    RETURN          reduce using rule 44 (estatuto -> asigna .)


state 66

    (45) estatuto -> llamada .

    ID              reduce using rule 45 (estatuto -> llamada .)
    READ            reduce using rule 45 (estatuto -> llamada .)
    WRITE           reduce using rule 45 (estatuto -> llamada .)
    IF              reduce using rule 45 (estatuto -> llamada .)
    FOR             reduce using rule 45 (estatuto -> llamada .)
    WHILE           reduce using rule 45 (estatuto -> llamada .)
    R_C_BRACKET     reduce using rule 45 (estatuto -> llamada .)
    RETURN          reduce using rule 45 (estatuto -> llamada .)


state 67

    (46) estatuto -> read .

    ID              reduce using rule 46 (estatuto -> read .)
    READ            reduce using rule 46 (estatuto -> read .)
    WRITE           reduce using rule 46 (estatuto -> read .)
    IF              reduce using rule 46 (estatuto -> read .)
    FOR             reduce using rule 46 (estatuto -> read .)
    WHILE           reduce using rule 46 (estatuto -> read .)
    R_C_BRACKET     reduce using rule 46 (estatuto -> read .)
    RETURN          reduce using rule 46 (estatuto -> read .)


state 68

    (47) estatuto -> write .

    ID              reduce using rule 47 (estatuto -> write .)
    READ            reduce using rule 47 (estatuto -> write .)
    WRITE           reduce using rule 47 (estatuto -> write .)
    IF              reduce using rule 47 (estatuto -> write .)
    FOR             reduce using rule 47 (estatuto -> write .)
    WHILE           reduce using rule 47 (estatuto -> write .)
    R_C_BRACKET     reduce using rule 47 (estatuto -> write .)
    RETURN          reduce using rule 47 (estatuto -> write .)


state 69

    (48) estatuto -> if_1 .

    ID              reduce using rule 48 (estatuto -> if_1 .)
    READ            reduce using rule 48 (estatuto -> if_1 .)
    WRITE           reduce using rule 48 (estatuto -> if_1 .)
    IF              reduce using rule 48 (estatuto -> if_1 .)
    FOR             reduce using rule 48 (estatuto -> if_1 .)
    WHILE           reduce using rule 48 (estatuto -> if_1 .)
    R_C_BRACKET     reduce using rule 48 (estatuto -> if_1 .)
    RETURN          reduce using rule 48 (estatuto -> if_1 .)


state 70

    (49) estatuto -> for_l .

    ID              reduce using rule 49 (estatuto -> for_l .)
    READ            reduce using rule 49 (estatuto -> for_l .)
    WRITE           reduce using rule 49 (estatuto -> for_l .)
    IF              reduce using rule 49 (estatuto -> for_l .)
    FOR             reduce using rule 49 (estatuto -> for_l .)
    WHILE           reduce using rule 49 (estatuto -> for_l .)
    R_C_BRACKET     reduce using rule 49 (estatuto -> for_l .)
    RETURN          reduce using rule 49 (estatuto -> for_l .)


state 71

    (50) estatuto -> while_l .

    ID              reduce using rule 50 (estatuto -> while_l .)
    READ            reduce using rule 50 (estatuto -> while_l .)
    WRITE           reduce using rule 50 (estatuto -> while_l .)
    IF              reduce using rule 50 (estatuto -> while_l .)
    FOR             reduce using rule 50 (estatuto -> while_l .)
    WHILE           reduce using rule 50 (estatuto -> while_l .)
    R_C_BRACKET     reduce using rule 50 (estatuto -> while_l .)
    RETURN          reduce using rule 50 (estatuto -> while_l .)


state 72

    (51) estatuto -> func_extra .

    ID              reduce using rule 51 (estatuto -> func_extra .)
    READ            reduce using rule 51 (estatuto -> func_extra .)
    WRITE           reduce using rule 51 (estatuto -> func_extra .)
    IF              reduce using rule 51 (estatuto -> func_extra .)
    FOR             reduce using rule 51 (estatuto -> func_extra .)
    WHILE           reduce using rule 51 (estatuto -> func_extra .)
    R_C_BRACKET     reduce using rule 51 (estatuto -> func_extra .)
    RETURN          reduce using rule 51 (estatuto -> func_extra .)


state 73
